--------------------------
Darshan Release Change Log
--------------------------

Darshan-3.2.2
=============
* add wrappers for preadv, preadv2, pwritev, and pwritev2 (improves profiling
  of ompio)

Darshan-3.2.1
=============
* fixed bug causing corruption of Darshan common access
  counters (POSIX, MPI-IO, and HDF5 modules) and potentially
  other preceding counters (reported by Gerd Heber)

Darshan-3.2.0
=============
* added detailed instrumentation of HDF5 library file and dataset
  interfaces
* added new logutil functions: darshan_log_get_modules,
  darshan_log_get_name_records, and darshan_log_get_record (contributed
  by Jakob Luettgau)
* extended DXT MPIIO module to trace file offsets
* added "--log-path" option to darshan-config to allow users to more
  easily determine where Darshan logs are stored
* silenced stdout from darshan-job-summary.pl and remove --summary option
* removed Darshan stubs library traditionally used in static linking test
  cases and other general simplifications of Darshan's static linking options
* fixed bug related to multiple definitions of fscanf symbols when building
  Darshan (reported by Francois Trahay)
* updated Darshan's compiler wrapper generators, MPICH profiling config
  hooks, and Cray software modules to explicitly link in Darshan in
  dynamic linking cases using rpath
* added `darshan-config --log-path` command option to display the log path(s)
  configured for use with Darshan
* reimplemented Darshan's MPI/PMPI wrapper macros (using functiona aliases)
  to avoid potential deadlock with other PMPI tools
* made use of DESTDIR match standard automake practice (contributed by
  Christopher Morrone)
* made "--with-mem-align" option optional, with a default of 8 (contributed
  by Christopher Morrone)
* corrected pkgconfig path for darshan-util when using DESTDIR (reported by
  Matthew Curry)
* added support for non-MPI instrumenation to Darshan, using GCC
construct/destructor attributes for bootstrapping rather than