@@ -37,8 +37,9 @@
 \twocolumn[
 \vspace{3.5in}
 \center
-{\bf \textcolor{red}{WARNING}}: This Darshan log contains incomplete data
-which may skew results in this document.
+{\bf \textcolor{red}{WARNING}}: This Darshan log contains incomplete data.
+This happens when a module runs out of memory to store new record data.
+Please run darshan-parser on the log file for more information.
 \endcenter
 ]
 \newpage
